# big-data-analytics

./: pyproject.toml
big-data-analytics/homeworks/hw2/: DATA_DOE_project.xlsx
big-data-analytics/homeworks/hw3/: hw3.ipynb  hw3_data.csv
big-data-analytics/lectures/L2/: data1.csv
big-data-analytics/lectures/L3/: KNN_Regressor.ipynb  KNN_reg_data.csv  logistic_regression.ipynb
big-data-analytics/lectures/L4/: Classification_KNN_LogisticRegression.ipynb  RandomForest.ipynb  classification_metrics.ipynb
big-data-analytics/lectures/L5/: GradientBoosting_and_XGBoost.ipynb
