[tool.poetry]
name = "big-data-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "big_data_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
jupyter-contrib-nbextensions = "^0.7.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
